--- a/src/pages/new.css
+++ b/src/pages/new.css
@@ -73,11 +73,20 @@ textarea {
     margin-top: 4px;
 }
 
+/* Styling for the folder picker drop-down menu and New Folder button. */
 .ae-button {
     border: 1px solid var(--color-btn-border);
     border-radius: 2px;
     background-color: var(--color-btn-bkgd);
     color: var(--color-btn-text);
+}
+
+.ae-button:hover {
+    background-color: var(--color-btn-hover-bkgd);
+}
+
+.ae-button:active {
+    background-color: var(--color-btn-active-bkgd);
 }
 
 .folder-picker-menubtn {
